SE-518: Fixed word wrapping on events table

--- a/src/pages/reports/messageEvents/MessageEventsPage.module.scss
+++ b/src/pages/reports/messageEvents/MessageEventsPage.module.scss
@@ -1,6 +1,5 @@
 @import '~@sparkpost/matchbox/src/styles/config.scss';
 
-
 .RightAlignedButtons {
   @media screen and (min-width: breakpoint(small)) {
     width: 50%;
@@ -19,4 +18,8 @@
   overflow: hidden;
   white-space: nowrap;
   max-width: 15vw;
+}
+
+.WordWrap {
+  word-break: normal;
 }
